--- a/custom_components/ha_dashboard/www/index.html
+++ b/custom_components/ha_dashboard/www/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/local/community/ha_dashboard/custom_components/ha_dashboard/www/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ha-vue-custom-panel</title>
-    <script type="module" crossorigin src="/js/index.js"></script>
-    <link rel="stylesheet" crossorigin href="/css/index.css">
+    <script type="module" crossorigin src="/local/community/ha_dashboard/custom_components/ha_dashboard/www/js/index.js"></script>
+    <link rel="stylesheet" crossorigin href="/local/community/ha_dashboard/custom_components/ha_dashboard/www/css/index.css">
   </head>
   <body>
     <div id="app"></div>
